# ejemplos-2021

./: CMakeLists.txt
Archivos/: input.cpp  output.cpp  outputBin.cpp
Archivos/txt/: archivo.txt  numeros.txt
Estructuras/: LinkedList.h  Node.h  Queue.h  Stack.h  colas-test.cpp  lista-test.cpp  lista-test2.cpp  pilas-test.cpp
MemoriaDinamica/: Ej2.cpp  malloc.cpp  newDelete.cpp  newMatriz.cpp
Punteros/: funct_parameter.cpp  puntero1.cpp  punteros_arreglos.cpp  punteros_arreglos2.cpp
Recursividad/: 00-potencia.cpp  01-fibonacci.cpp  QuickSort.cpp
TDA/: ejPunto.cpp
TDA/lib/: Point.cpp  Point.h
